Fix atob and message-box styling issues on safari

--- a/src/app/components/message-log/message-log.component.scss
+++ b/src/app/components/message-log/message-log.component.scss
@@ -13,11 +13,11 @@
   display: block;
   margin: 16px;
   padding: 16px;
-  box-shadow: inset 0px 2px 8px -2px rgba(0,0,0,0.5);
-  background-color: #dddddd;
+  background-color: #cccccc;
   border-radius: 2px;
   .item {
     background-color: rgba(255,255,255,0.8);
+    border-radius: 2px;
     margin: 2px;
     max-width: 100%;
     display: flex;
@@ -30,6 +30,7 @@
     overflow: hidden;
 
     .star {
+      flex: 0 0 auto;
       font-size: 20px;
       height: 20px;
       text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
@@ -38,6 +39,7 @@
     }
 
     .name {
+      flex: 0 0 auto;
       padding-right: 4px;
     }
 
